[package]
name = "todo-project"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.27.2"
serde = "1.0.117"
serde_derive = "1.0.117"
serde_json = "1.0.59" 
 eframe = { version = "0.24.1", default-features = false, features = [
     "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
     "default_fonts", # Embed the default egui fonts.
     "glow",          # Use the glow rendering backend. Alternative: "wgpu".
     "persistence",   # Enable restoring app state when restarting the app.
 ] }

